<resources>
    <string name="app_name">ToDo List</string>
    <string name="button">Button</string>
    <string name="add_title">Add Title</string>
    <string name="add_date">Add date</string>
    <string name="add">Add</string>
    <string name="priority">Priority:</string>
    <string name="add_time">Add Time</string>
    <string-array name="priorities">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
</resources>