<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="viewModel" type="study.my.todo_list.ToDoListViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:hint="@string/add_title"
            android:text="@={viewModel.title}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <Button
            android:id="@+id/bAddList"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="20dp"
            android:onClick="@{ (v) -> viewModel.click(v)}"
            android:text="@string/add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/priorities_spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etdate" />

        <EditText
            android:id="@+id/etdate"
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:focusable="false"
            android:hint="@string/add_date"
            android:inputType="none"
            android:text="@={viewModel.date}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <EditText
            android:id="@+id/etTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:focusable="false"
            android:hint="@string/add_time"
            android:inputType="none"
            android:text="@={viewModel.time}"
            app:layout_constraintBottom_toBottomOf="@+id/etdate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/etdate"
            app:layout_constraintTop_toTopOf="@+id/etdate" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTodoList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bAddList"
            tools:listitem="@layout/item_tolist" />

        <Spinner
            android:id="@+id/priorities_spinner"
            android:layout_width="102dp"
            android:layout_height="39dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="11dp"
            android:entries="@array/priorities"
            app:layout_constraintBottom_toTopOf="@+id/rvTodoList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.482"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etdate" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="103dp"
            android:layout_height="37dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="13dp"
            android:text="@string/priority"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/rvTodoList"
            app:layout_constraintEnd_toStartOf="@+id/priorities_spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etdate" />


    </androidx.constraintlayout.widget.ConstraintLayout>
        </layout>